# BlackJack

./: .clang-format  CMakeLists.txt  mainwindow.cpp  mainwindow.h
scene/: scene.cpp  scene.h
view/: view.cpp  view.h
